# NightScapeEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Assets/Models/: APD.bbmodel  APD.mtl  APD_Diffuse.dds  T_Cockpit_Diffuse.dds  model.mtl
Assets/Shaders/: Base.hlsl  Display.hlsl  Error.hlsl  FullscreenQuad.hlsl  Lit.hlsl  ParticlePulseWeapon.hlsl  ParticleStar.hlsl  ParticleUnlit.hlsl  ParticleUnlitBillboard.hlsl  ParticleUnlitLine.hlsl  Planet.hlsl  PlanetAtmosphere.hlsl  ProgressBarLine.hlsl  Radar.hlsl  RadarParticle.hlsl  Skybox.hlsl  StarQuad.hlsl  TargetPreview.hlsl  Triangle.hlsl  UIElement.hlsl  UIProgressBar.hlsl  UIText.hlsl
Assets/Shaders/Include/: NSECommon.hlsl  NSEHash.hlsl  NSELight.hlsl
Assets/Shaders/ShaderLibrary/: Core.hlsl  Lighting.hlsl  Noise.hlsl  Particles.hlsl
Assets/Textures/: Default-FontAtlas.dds  NicoPups-FontAtlas.dds  SkyboxStars_Atlas.dds  UI_Atlas.dds  UI_Menu_Atlas.dds
cmake/: Catch.cmake  CatchAddTests.cmake
libs/: Dependencies List.txt
libs/NSE/include/: NSE.h  pch.h
libs/entt/: LICENSE.txt
libs/freeglut/: AUTHORS.txt  LICENSE.txt
libs/freeglut/include/GL/: freeglut_ext.h  freeglut_std.h  freeglut_ucall.h
libs/freeglut/lib/x64/: freeglut.exp
src/: NSE.cpp  NSE.h  application.cpp  application.h  main.cpp  pch.h
src/Engine/Runtime/Application/: ApplicationServer.cpp  ApplicationServer.h
src/Engine/Runtime/Assets/: Asset.h  AssetsServer.cpp  AssetsServer.h  TextAsset.cpp  TextAsset.h
src/Engine/Runtime/Audio/: AudioServer.cpp
src/Engine/Runtime/Core/: Engine.cpp  Engine.h  EngineConfiguration.h  EngineServer.cpp  EngineServer.h  IAppInstance.h  IEditorInstance.h  Ref.cpp  Ref.h
src/Engine/Runtime/Input/: InputServer.cpp  InputServer.h
src/Engine/Runtime/Math/: Math.h
src/Engine/Runtime/Memory/: FactoryRegistry.cpp  FactoryRegistry.h  IComponent.h  IComponentFactory.h
src/Engine/Runtime/Physics/: PhysicsServer.cpp  PhysicsServer.h
src/Engine/Runtime/Profiling/: ProfilingServer.cpp  ProfilingServer.h
src/Engine/Runtime/Render/: IRenderAPI.h  IRenderPass.cpp  Mesh.cpp  Mesh.h  PipelineConfiguration.h  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  RenderPipelinePass.cpp  RenderPipelinePass.h  RenderPipelineServer.cpp  RenderPipelineServer.h  RenderServer.cpp  RenderServer.h  RenderServer_OpenGLImpl.cpp  RenderTexture.h  Shader.h  Texture.h  Texture2D.cpp  Texture2D.h  TextureCubemap.cpp  TextureCubemap.h
src/Engine/Runtime/Scene/: Entity.cpp  Entity.h  EntitySystem.cpp  Entity_SceneImplementation.h  Scene.cpp  Scene.h  SceneServer.cpp  SceneServer.h
src/Engine/Runtime/Serializer/: CommonSerializers.cpp  CommonSerializers.h  ObjectSerializer.cpp  ObjectSerializer.h  SerializerServer.cpp
src/engine/: NSECommon.h  NightScapeEngine.h  engine.cpp  engine.h  nsepch.h  obj_ptr.h
src/engine/addon/: DDSTextureLoader11.cpp  DDSTextureLoader11.h
src/engine/data/: Light.cpp  Light.h  LightsProperties.cpp  LightsProperties.h  Mesh.cpp  Mesh.h  ShaderDepthState.h  SpriteTexture.h
src/engine/ecs/: Entity.cpp  Entity.h  EntityRegistry.cpp  EntityRegistry.h
src/engine/entity/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  FreeCamera.cpp  FreeCamera.h  FullscreenQuad.cpp  FullscreenQuad.h  Object.cpp  Object.h  ParticleSystem.cpp  ParticleSystem.h  ProgressBarVisual.cpp  ProgressBarVisual.h  QuadVisual.cpp  QuadVisual.h  SceneEntity.cpp  SceneEntity.h  SpriteVisual.cpp  SpriteVisual.h  TextVisual.cpp  TextVisual.h  TriangleVisual.cpp  TriangleVisual.h  VisualEntity.cpp  VisualEntity.h  VisualMeshEntity.cpp  VisualMeshEntity.h
src/engine/math/: Math.cpp  Math.h  math.h
src/engine/physics/: CollisionEntity.cpp  CollisionEntity.h  RigidEntity.cpp  RigidEntity.h
src/engine/render/: BlendState.cpp  BlendState.h  ConstBufferData.cpp  ConstBufferData.h  ConstantBuffer.cpp  ConstantBuffer.h  ConstantBufferData.cpp  ConstantBufferData.h  ConstantBufferDescription.cpp  ConstantBufferDescription.h  DepthStencilState.cpp  DepthStencilState.h  DrawProperties.cpp  DrawProperties.h  GlobalProperties.cpp  GlobalProperties.h  GraphicsBuffer.cpp  GraphicsBuffer.h  Material.cpp  Material.h  PixelShader.cpp  PixelShader.h  RenderTexture.cpp  RenderTexture.h  SamplerState.cpp  SamplerState.h  Shader.cpp  Shader.h  ShaderInputs.cpp  ShaderInputs.h  ShaderInputsData.cpp  ShaderInputsData.h  ShaderInputsDescription.cpp  ShaderInputsDescription.h  ShaderProgramTemplate.h  ShaderUtils.cpp  ShaderUtils.h  Texture.cpp  Texture.h  Texture2D.cpp  (+3 more)
src/engine/scene/: Scene.cpp  Scene.h
src/engine/servers/: ApplicationServer.cpp  ApplicationServer.h  AssetServer.cpp  AssetServer.h  BaseServer.cpp  BaseServer.h  InputServer.cpp  InputServer.h  ObjectServer.cpp  ObjectServer.h  RenderPipelineServer.cpp  RenderPipelineServer.h  RenderServer.cpp  RenderServer.h  SceneServer.cpp  SceneServer.h  ScreenServer.cpp  ScreenServer.h  ShaderCompiler.cpp  ShaderCompiler.h  SoundServer.cpp  SoundServer.h  TimeServer.cpp  TimeServer.h
src/game/: ItemVisualUI.cpp  ItemVisualUI.h  Planet.cpp  Planet.h  RadarParticleSystem.cpp  RadarParticleSystem.h  ShipController.cpp  ShipController.h  ShipMarkersVisual.cpp  ShipMarkersVisual.h  ShipRadarController.cpp  ShipRadarController.h  SkyboxStarsParticles.cpp  SkyboxStarsParticles.h  StarDustParticles.cpp  StarDustParticles.h  StarsCamera.cpp  StarsCamera.h  game.cpp  game.h
src/game/data/: GalaxyLayer.h  INavigatable.h  ITargetable.h  InventoryItemDescription.cpp  InventoryItemDescription.h  InventoryItemStack.h  PlanetCreationParameters.h  ProjectileData.h
src/game/droid/: DroidEntity.cpp  DroidEntity.h
src/game/planetary/: ISpaceObject.h  Planet.cpp  Planet.h  PlanetMeshTools.cpp  PlanetMeshTools.h
src/game/ship/: PulseWeaponEntity.cpp  PulseWeaponEntity.h  WeaponEntity.cpp  WeaponEntity.h
src/game/systems/: GalaxySystem.cpp  GalaxySystem.h  GameSystem.h  GenerationSystem.cpp  GenerationSystem.h  InventorySystem.cpp  InventorySystem.h  LevelSystem.cpp  LevelSystem.h  MainSystem.cpp  MainSystem.h  NavigationSystem.cpp  NavigationSystem.h  ShipSystem.cpp  ShipSystem.h
tests/: CatchMain.cpp
(+115 files in other folders)
